{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "a22a3915-d81b-d718-0012-86ff9a4b2e93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08214d6bb674cce54",
            "arn": "arn:aws:ec2:us-east-1:471112663419:elastic-ip/eipalloc-08214d6bb674cce54",
            "domain": "vpc",
            "id": "eipalloc-08214d6bb674cce54",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-148-15.compute-1.amazonaws.com",
            "public_ip": "3.232.148.15",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d1e6effdc040693",
            "arn": "arn:aws:ec2:us-east-1:471112663419:elastic-ip/eipalloc-08d1e6effdc040693",
            "domain": "vpc",
            "id": "eipalloc-08d1e6effdc040693",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-147-89.compute-1.amazonaws.com",
            "public_ip": "18.209.147.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:internet-gateway/igw-03bcdc841d54b2afb",
            "id": "igw-03bcdc841d54b2afb",
            "owner_id": "471112663419",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-igw"
            },
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112663419:loadbalancer/app/vps-dev-alb/190be0bb9abd7fac",
            "arn_suffix": "app/vps-dev-alb/190be0bb9abd7fac",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vps-dev-alb-463469074.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112663419:loadbalancer/app/vps-dev-alb/190be0bb9abd7fac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vps-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a23d2bf0817c05e0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0382c0c054b93cd03"
              },
              {
                "subnet_id": "subnet-03b8ecbea9ac7a352"
              }
            ],
            "subnets": [
              "subnet-0382c0c054b93cd03",
              "subnet-03b8ecbea9ac7a352"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-alb"
            },
            "vpc_id": "vpc-041a152deb02c4f75",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112663419:listener/app/vps-dev-alb/190be0bb9abd7fac/e7409ca8ec1c9d00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112663419:targetgroup/vps-dev-tg/b66e1f9d2e224e9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112663419:listener/app/vps-dev-alb/190be0bb9abd7fac/e7409ca8ec1c9d00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112663419:loadbalancer/app/vps-dev-alb/190be0bb9abd7fac",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112663419:targetgroup/vps-dev-tg/b66e1f9d2e224e9d",
            "arn_suffix": "targetgroup/vps-dev-tg/b66e1f9d2e224e9d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112663419:targetgroup/vps-dev-tg/b66e1f9d2e224e9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vps-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08214d6bb674cce54",
            "association_id": "eipassoc-034bcabbace4d03ce",
            "connectivity_type": "public",
            "id": "nat-02a9f3d2ed14beab4",
            "network_interface_id": "eni-002d165a1fc7ea42c",
            "private_ip": "10.0.1.97",
            "public_ip": "3.232.148.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0382c0c054b93cd03",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d1e6effdc040693",
            "association_id": "eipassoc-095706e6e6f7c2c6f",
            "connectivity_type": "public",
            "id": "nat-0272ff8127edf2943",
            "network_interface_id": "eni-097a1175df37023e9",
            "private_ip": "10.0.2.212",
            "public_ip": "18.209.147.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b8ecbea9ac7a352",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:route-table/rtb-0585dc107b6209559",
            "id": "rtb-0585dc107b6209559",
            "owner_id": "471112663419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02a9f3d2ed14beab4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:route-table/rtb-069541ff65f8cae24",
            "id": "rtb-069541ff65f8cae24",
            "owner_id": "471112663419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0272ff8127edf2943",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:route-table/rtb-01ecfdbe1659d7dcc",
            "id": "rtb-01ecfdbe1659d7dcc",
            "owner_id": "471112663419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bcdc841d54b2afb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265d8e84e5ff9fc1",
            "route_table_id": "rtb-0585dc107b6209559",
            "subnet_id": "subnet-001f29c51e6294efe"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07113284f665493e1",
            "route_table_id": "rtb-069541ff65f8cae24",
            "subnet_id": "subnet-0124401ea0fb64b28"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017468537b8f14003",
            "route_table_id": "rtb-01ecfdbe1659d7dcc",
            "subnet_id": "subnet-0382c0c054b93cd03"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc06aa433cc471f",
            "route_table_id": "rtb-01ecfdbe1659d7dcc",
            "subnet_id": "subnet-03b8ecbea9ac7a352"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:security-group/sg-0a23d2bf0817c05e0",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a23d2bf0817c05e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vps-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "471112663419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:security-group/sg-047272f976ca2dad4",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047272f976ca2dad4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a23d2bf0817c05e0"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vps-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "471112663419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-001f29c51e6294efe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f29c51e6294efe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-0124401ea0fb64b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0124401ea0fb64b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-0382c0c054b93cd03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382c0c054b93cd03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:subnet/subnet-03b8ecbea9ac7a352",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b8ecbea9ac7a352",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112663419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-041a152deb02c4f75"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112663419:vpc/vpc-041a152deb02c4f75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdaf56e3cab4f897",
            "default_route_table_id": "rtb-0d8b518b42c8ca154",
            "default_security_group_id": "sg-051b0d363e4fb779c",
            "dhcp_options_id": "dopt-0e69a4ffbb56c01d9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041a152deb02c4f75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8b518b42c8ca154",
            "owner_id": "471112663419",
            "tags": {
              "Environment": "dev",
              "Name": "vps-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vps-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}